--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.11",
+    "lottie-web": "^5.12.2",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
