feat: update to nextjs v15

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.2.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -12,7 +12,7 @@
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.11",
     "lottie-web": "^5.12.2",
-    "next": "14.2.3",
+    "next": "^15.0.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.3.0"
